reports/basic_practice2.log
Traceback (most recent call last):
  File "C:\Users\morishita\AppData\Local\Programs\Python\Python310\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\morishita\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\morishita\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\morishita\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\morishita\AppData\Local\Programs\Python\Python310\lib\asyncio\base_events.py", line 646, in run_until_complete
    return future.result()
  File "C:\Users\morishita\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\morishita\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\morishita\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# ä»®å¼•æ•°ã¯ä¾¿åˆ©ã ãŒã€å¼•æ•°ã®é †ç•ªã¨ã—ã¦ã¯ã€ä»®å¼•æ•°ã¨ã—ãªã„å¼•æ•°ã‚ˆã‚Šã‚‚å³å´ã«ã‚ã‚‹å¿…è¦ãŒã‚ã‚‹ã€‚
# ã—ãŸãŒã£ã¦ã€ä»¥ä¸‹ã®ä¾‹ã§ã¯ã‚¨ãƒ©ãƒ¼ã¨ãªã‚‹ã€‚
# ã‚¨ãƒ©ãƒ¼ãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ã®ã€Œnon-default argument follows default argumentã€ã‚’æ„è¨³ã™ã‚Œã°ã€
# ã€Œä»®å¼•æ•°ã®å³å´ã«ä»®å¼•æ•°ã§ã¯ãªã„å¼•æ•°ãŒã‚ã‚‹ã€ã¨ãªã‚‹ã€‚

def get_value(x=100, rate):
    return x * (1 + rate)

print(get_value(1000))
------------------

[1;36m  Cell [1;32mIn [2], line 6[1;36m[0m
[1;33m    def get_value(x=100, rate):[0m
[1;37m                         ^[0m
[1;31mSyntaxError[0m[1;31m:[0m non-default argument follows default argument

SyntaxError: non-default argument follows default argument (1402581148.py, line 6)

